@@ -17,6 +17,8 @@ or info related to the entry. <http://sourceforge.net/projects/vpopmail/>
 	  when editing default limits.
 	- Change columns in Postgres valias table to varchar from char.
 	  See README.pgsql for instructions on fixing existing tables.
+	- vmoduser: update maildirsize instead of just deleting it when
+	  modifying quota.
 
 	Gentoo Port
 	- Integrate vuserinfo patch to fix the -a option and to display 
